--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,9 +1,10 @@
-@import url(./assets/font.css);
 :root {
   --primary-color:rgb(145, 72, 56);
   --primary-color-diff:rgb(255, 255, 255);
+}
 
-  font-family: 'Taviraj', serif;
+*{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,20 +13,19 @@
 }
 
 a {
-  font-weight: 500;
-  color: var(--primary-color);
-  text-decoration: inherit;
+  text-decoration: none;
+  transition: font-size .5s ease-out;
 }
 a:hover {
   color: #535bf2;
+  cursor: pointer;
+  font-size: larger;
 }
-
 body {
   margin: 0;
   display: flex;
   width: 100vw;
   height: 100vh;
-  padding: 4px;
   box-sizing: border-box;
 }
 #app{
@@ -33,36 +33,25 @@ body {
   border-radius: 2px;
   overflow: hidden;
 }
-
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: var(--primary-color);
-  color: var(--primary-color-diff);
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: var(--primary-color);
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-button:disabled{
-  background-color: gray;
-  color: lightgray;
-  cursor: no-drop;
 }
 strong{
   font-weight: 700;
+}
+input{
+  font-size: 1.5em;
+}
+input::placeholder{
+  font-style: italic;
+}
+button{
+  padding: 8px 12px;
+  background-color: var(--primary-color);
+  color: var(--primary-color-diff);
+}
+button:disabled{
+  background-color: gray;
+  cursor: not-allowed;
 }
